# gapmoe

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml  publish.yml  tests.yml
.note/: README.md  flow_release_handover.md  mltilt_feedback_flow_release.md  plan.md  structure.md
docs/: api.rst  conf.py  getting-started.rst  index.rst  mb21333_isochrone_discontinuity_bug.md  parameterizations.rst  source-selection.rst  workflow.rst
example/: emcee_binary_circular.ipynb  emcee_physical_params.ipynb  flow_galactic_model.ipynb  jax_prior.ipynb  pre_runner.ipynb
flow_mvp/: build_rate_included_source_grid.py  build_source_distance_grid.py  genulens_cli_grid_samples.py  genulens_cli_samples.py  prepare_balanced_flow_samples.py  prepare_selection_aware_samples.py  selection_aware_flow.py  train_selection_aware_flow.py  validate_event_kernel.py  validate_rate_included_joint.py
src/gapmoe/: EarthMotion.py  EarthMotion_tmp.py  __init__.py  calc_vEarth.py  flow_package.py  flow_releases.py  flow_source_grid.py  gapmoe.py  gapmoeJax.py  model.py  parametrics.py  parametrics2.py  parametrics_old.py  physical.py  pre_runner.py  source_selection.py
src/gapmoe/data/flows/default/: manifest.json  source_distance_grid.npz
src/gapmoe/data/flows/default/event_kernel/: config.json
src/gapmoe/data/flows/rate-included-v1/: manifest.json  source_distance_grid.npz
src/gapmoe/data/flows/rate-included-v1/event_kernel/: config.json  group_overrides.json
src/gapmoe/data/flows/rate-included-v1/event_kernel/rare_groups/: config.json
src/gapmoe/density/: __init__.py  base.py  flow_backend.py  histogram.py  histogram_backend.py  histogram_jax.py  histogram_numpy.py  histogram_tables.py
src/gapmoe/orbit/: __init__.py  _kepler_core.py  projected_kepler.py
src/gapmoe/param_types/: __init__.py  _orbit_proposal.py  base.py  binary_lens.py  param_type.py  single_lens.py
src/gapmoe/parameterizations/: __init__.py  base.py  binary_lens.py  single_lens.py
src/gapmoe/priors/: __init__.py  cmd.py  event_rate.py  event_rate_backend.py  event_rate_jax.py  galactic.py  galactic_jax.py  high_level.py  mapped.py  parameterized.py  source.py
src/genulens/: calc_mass_distribution_each.c  calc_rhon_at_Dlb.c  compile.sh  genulens_helio.c  murel_sampling.c  murel_sampling_2d.c  option.c  random.c  random.h
test_tool/: Untitled.ipynb  auto_corr_analysis.ipynb  auto_corr_analysis_event05.ipynb  check_jacob.ipynb  check_piE_direction_01.ipynb  check_piE_direction_02.ipynb  comp_prior.ipynb  comp_prior_kepler.ipynb  conv_result_01.ipynb  conv_result_02.ipynb  convert_test.ipynb  event10_genulens.ipynb  event1_direct.ipynb  event1_final.ipynb  event2_direct-Copy1.ipynb  event2_direct.ipynb  event2_final.ipynb  event6_direct.ipynb  event7_direct.ipynb  event8_direct.ipynb  event9_direct.ipynb  gap_mcmc_lom_10.py  genulens_analysis.ipynb  mag_magerr_plot.ipynb  make_corner_prior.ipynb  make_final_result_02.ipynb  make_final_result_kepler_01.ipynb  make_lc_plot_01.ipynb  make_lc_plot_01_kepler.ipynb  make_lc_plot_02.ipynb  make_lc_plot_02_kepler.ipynb  make_lc_plot_05_kepler.ipynb  mcmc_base.ipynb  mcmc_circ_01.py  mcmc_circ_02.py  mcmc_ds_kepler_01.py  mcmc_kepler_01.py  mcmc_kepler_02.py  mcmc_kepler_04.py  mcmc_kepler_05.py  (+72 more)
tests/: test_examples.py  test_flow_backend.py  test_flow_package.py  test_flow_rate_factor.py  test_flow_source_grid.py  test_flow_training_data.py  test_high_level_source_api.py  test_histogram_backends.py  test_model_api.py  test_orbit_proposal.py  test_parameterizations.py  test_pre_runner.py  test_projected_kepler.py  test_psk_prior_jacobian.py  test_source_selection.py
