[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gapmoe"
version = "0.1.0"
description = "Galactic prior tools for microlensing event modeling"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "gapmoe contributors" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
  "astropy",
  "equinox",
  "flowjax",
  "genulens>=2.0.0a3",
  "jax",
  "numpy",
]

[project.optional-dependencies]
examples = [
  "corner",
  "emcee",
  "matplotlib",
]
dev = [
  "build",
  "corner",
  "emcee",
  "jax",
  "matplotlib",
  "pytest",
  "twine",
]

[project.urls]
Homepage = "https://github.com/NunotaKansuke/gapmoe"
Repository = "https://github.com/NunotaKansuke/gapmoe"
Issues = "https://github.com/NunotaKansuke/gapmoe/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gapmoe = [
  "data/*.txt",
  "data/flows/default/*.json",
  "data/flows/default/*.npz",
  "data/flows/default/event_kernel/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
