[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gapmoe"
version = "0.1.0"
description = "Galactic prior tools for microlensing event modeling"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "gapmoe contributors" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
  "astropy",
  "genulens>=2.0.0a3",
  "jax",
  "numpy",
]

[project.optional-dependencies]
examples = [
  "corner",
  "emcee",
  "matplotlib",
]
docs = [
  "sphinx",
]
dev = [
  "build",
  "corner",
  "emcee",
  "jax",
  "matplotlib",
  "pytest",
  "sphinx",
  "twine",
]

[project.urls]
Homepage = "https://github.com/NunotaKansuke/gapmoe"
Repository = "https://github.com/NunotaKansuke/gapmoe"
Issues = "https://github.com/NunotaKansuke/gapmoe/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gapmoe = ["data/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
